--- a/src/style/tool-tip.less
+++ b/src/style/tool-tip.less
@@ -1,48 +1,17 @@
-.tool-tip {
-  position: relative;
-  display: flex;
-  &__text {
+.tooltip {
+  position: absolute;
+  z-index: 20;
+  padding: 4px 12px;
+  border-radius: 4px;
+  font-size: 12px;
+  color: #ffffff;
+  white-space: nowrap;
+  background-color: #303133;
+  transition: opacity 0.15s linear;
+  &.transparent {
+    opacity: 0;
+  }
+  &.hidden {
     display: none;
-    position: absolute;
-    left: 50%;
-    top: 100%;
-    transform: translate(-50%, 6px);
-    z-index: 20;
-    padding: 4px 8px;
-    border-radius: 4px;
-    background-color: rgba(0, 0, 0, 0.8);
-    font-size: 12px;
-    text-align: center;
-    white-space: nowrap;
-    color: #ffffff;
-    transition: opacity 0.15s linear;
-    &::before {
-      position: absolute;
-      top: -16px;
-      left: 50%;
-      z-index: 30;
-      transform: translateX(-50%);
-      content: '';
-      border: 8px solid rgba(0, 0, 0, 0);
-      border-bottom-color: rgba(0, 0, 0, 0.8);
-    }
-    &.block {
-      display: block;
-    }
-    &.hidden {
-      opacity: 0;
-    }
-    &.right-out {
-      transform: translate(-80%, 6px);
-      &::before {
-        left: 80%;
-      }
-    }
-    &.left-out {
-      transform: translate(-20%, 6px);
-      &::before {
-        left: 20%;
-      }
-    }
   }
 }
